2009-01-19  Ankit Jain  <radical@gmail.com>

	* src/PlatformService (PlaySoundFile): New.
	(GetString): New.
	* src/GnomePlatformService.cs:
	* src/WindowsPlatformService.cs: Implement the new methods.

	* src/Application.cs:
	* src/RequestHandler.cs:
	* src/SendingHandler.cs:
	* src/TargetService.cs:
	Replace Mono.Unix.Catalog.GetString calls with
	PlatformService.GetString, and same for Gnome.Sound.Play

	* src/PreferencesDialog.cs:
	* src/TargetWindow.cs:
	* src/UriList.cs: Remove unused 'using Mono.Unix*'

2009-01-19  Ankit Jain  <radical@gmail.com>

	* Application.cs: Use Gtk.StatusIcon instead of Egg.TrayIcon .
	This should be more cross-platform.
	Remove unused (related) old code.

2009-01-19  Ankit Jain  <radical@gmail.com>

	Abstract out platform specific bits.
	* src/IDesktopApplication.cs: New.
	* src/PlatformService.cs: New.
	* src/Services.cs: New.

	* src/GnomeApplication.cs: New. Implement IDesktopApplication.
	* src/GtkApplication.cs: New. Likewise.
	(SetProcessName): Move here from .. 
	* src/Utilities.cs (SetProcessName): .. here.

	* src/GnomePlatformService.cs: New. Implement PlatformService.
	* src/WindowsPlatformService.cs: New. Likewise.

	* src/Application.cs: Track api changes.

	* Makefile.am: Add the new files.
	* giver.mdp: Likewise.

2008-03-20  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs, src/TargetService.cs: Fixed
	  up the tasque integration for drag and drop

2008-03-19  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/RequestHandler.cs, src/Protocol.cs: Added more
	  hackish code to support Tasque Tasks much like Tomboy notes

2008-02-13  Andrew Jorgensen <andrew.jorgensen@gmail.com> 

	* src/ServiceLocator.cs, src/GiverService.cs: Replaced avahi-sharp code with
	  Mono.Zeroconf
	* src/Makefile.am, giver.mdp, configure.ac: Depends on Mono.Zeroconf instead
	  of avahi-sharp

2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated to 0.1.9
